Fix background bleeding.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+body, html {
   background: white;
 }
 
-.dark html {
+.dark body, html {
   background: rgb(3 7 18); /* gray-950 */
 }
 
